[project]
name = "ble2wled"
description = "Real-time Bluetooth Low Energy beacon visualization on WLED LED strips"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
license-files = ["LICENSE*"]
authors = [
    {name = "Tobias Hildebrand", email = "tobus3000@tobotec.ch"}
]
keywords = ["bluetooth", "ble", "wled", "leds", "mqtt", "beacon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.25.0",
    "paho-mqtt>=1.6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ble2wled = "ble2wled.main:main"
ble2wled-simulator = "ble2wled.cli_simulator:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "ruff>=0.1.0",
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.17.0",
    "towncrier>=21.3.0",
]

[project.urls]
Homepage = "https://ble2wled.tobotec.ch"
Repository = "https://github.com/tobus3000/ble2wled"
Issues = "https://github.com/tobus3000/ble2wled/issues"

[build-system]
requires = ["hatchling >= 1.26", "hatch-vcs >= 0.5.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
vcs = "git"
format = "{tag}.dev{distance}"  # omit the +g<hash> local segment

[tool.hatch.version.raw-options]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.hatch.build.targets.wheel]
packages = ["src/ble2wled"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["ble2wled"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
